# my_robot

./: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  CTestConfiguration.ini  CTestTestfile.cmake  LICENSE  Makefile  README.md  Train_TFLite2_Object_Detction_Model.ipynb  cmake_install.cmake  my_robot.launch~  package.xml~
atomic_configure/: .rosinstall  setup.sh
catkin_generated/: generate_cached_setup.py  package.cmake  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py  setup_cached.sh
catkin_generated/installspace/: my_robot.pc  my_robotConfig.cmake
catkin_generated/stamps/my_robot/: _setup_util.py.stamp  package.xml.stamp
cmake/: my_robot-genmsg-context.py  my_robot-genmsg.cmake
devel/: .catkin  local_setup.sh
devel/lib/my_robot/: main_subscriber  voice
devel/lib/pkgconfig/: my_robot.pc
devel/share/my_robot/cmake/: my_robotConfig.cmake
devel/share/roseus/ros/my_robot/: manifest.l
gtest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
gtest/googlemock/: CTestTestfile.cmake  Makefile  cmake_install.cmake
gtest/googlemock/gtest/: CTestTestfile.cmake  Makefile
launch/: my_robot.launch  my_robot.launch~
scripts/: servo.py  servo.py~
src/: #voice.cpp#  continuous.cpp~  continuous.c~  main_subscriber.cpp  main_subscriber.cpp~  voice.cpp  voice.cpp~
